# dindin-pdf

./: Current_Status.md  Makefile.am  ProjectHome.md  autogen.sh  configure.in
src/: Makefile.am  cover_animation.h  cube_animation.c  cube_animation.h  dindin.c  global.h  list.h  slide.c  slide.h  slide_view.c  slide_view.h  slip_animation.c  slip_animation.h  state.c  state.h  thumb_view.c  thumb_view.h  toolkit.c  toolkit.h  toolkit_glut.h  toolkit_gtk.c
trunk/: configure.in
trunk/po/: POTFILES.in
trunk/src/: Makefile.am  cover_animation.c  cube_animation.c  cube_animation.h  debug.h  dindin.c  global.h  slide.c  slide.h  slide_view.h  slip_animation.c  slip_animation.h  thumb_view.c  thumb_view.h  toolkit.c  toolkit.h  toolkit_glut.c  toolkit_gtk.h
wiki/: Current_Status.wiki
