ACLOCAL_AMFLAGS = -I m4
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.h.in \
		       config.sub configure depcomp install-sh ltmain.sh \
		       missing config.rpath mkinstalldirs 

SUBDIRS = src po

files_BIN = src/dindin
	     
EXTRA_DIST = $(files_BIN)
	
clean-local:
	rm -rf *~
